@@ -1,7 +1,20 @@
 #!/bin/sh
 
+COMMANDS=
 while read in; do
-  COMMANDS="$COMMANDS \"$in $(echo $in | tr "a-z" "A-Z")\""
+	COMMANDS="${COMMANDS:+$COMMANDS }$in"
 done < $1
-DEBCONF_OLD_FD_BASE="$(cpp -dM "$2" | grep '#define DEBCONF_OLD_FD_BASE' | cut -d' ' -f3)"
-sed -e "s,@COMMANDS@,$COMMANDS," -e "s,@DEBCONF_OLD_FD_BASE@,$DEBCONF_OLD_FD_BASE," < $3
+export COMMANDS
+export DEBCONF_OLD_FD_BASE="$(cpp -dM "$2" | grep '#define DEBCONF_OLD_FD_BASE' | cut -d' ' -f3)"
+perl -ne '
+	if (s/^REPEAT: //) {
+		for my $command (split " ", $ENV{COMMANDS}) {
+			local $_ = $_;
+			s/\@command\@/$command/g;
+			s/\@COMMAND\@/\U$command/g;
+			print;
+		}
+	} else {
+		s/\@DEBCONF_OLD_FD_BASE\@/$ENV{DEBCONF_OLD_FD_BASE}/g;
+		print;
+	}' < $3
