@@ -9,6 +9,11 @@ cdebconf (0.76) UNRELEASED; urgency=low
       debconfclient_commandf and make it static. Doesn't seem to affect any
       current users, and if it does, they should have been using
       debconf->commandf() instead.
+    - Sync from debconf (closes: #266898):
+      + Change the shell confmodule to not construct functions on the fly.
+        The new code is smaller, a bit faster, and simpler, but the
+        important thing is that it does not clobber $@. The old version
+        messed up $@ if parameters contained spaces.
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 19 Apr 2005 14:45:09 +1000
 
